packages/fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.stderr
error: Type with ident 'Ident { ident: "BadType", span: #0 bytes(217..224) }' not defined in the ABI.
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  | #[indexer(manifest = "packages/fuel-indexer-tests/trybuild/simple_wasm.yaml")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `indexer` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: use of undeclared type `Receipt`
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |                 Receipt::Call {
  |                 ^^^^^^^ use of undeclared type `Receipt`

error[E0433]: failed to resolve: use of undeclared type `Receipt`
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |                 Receipt::ReturnData {
  |                 ^^^^^^^ use of undeclared type `Receipt`

error[E0422]: cannot find struct, variant or union type `SomeEvent` in this scope
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |     let s = SomeEvent {
  |             ^^^^^^^^^ not found in this scope

error[E0412]: cannot find type `Block` in this scope
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |     let data: Vec<Block> = vec![Block {
  |                   ^^^^^ not found in this scope
  |
help: consider importing one of these items
   |
2  | use fuel_indexer_plugin::prelude::Block;
   |
2  | use fuel_indexer_types::prelude::Block;
   |
2  | use syn::Block;
   |

error[E0422]: cannot find struct, variant or union type `Block` in this scope
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |     let data: Vec<Block> = vec![Block {
  |                                 ^^^^^ not found in this scope
  |
help: consider importing one of these items
   |
2  | use fuel_indexer_plugin::prelude::Block;
   |
2  | use fuel_indexer_types::prelude::Block;
   |
2  | use syn::Block;
   |
2  | use syn::Expr::Block;
   |

error[E0422]: cannot find struct, variant or union type `Header` in this scope
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |         header: Header {
  |                 ^^^^^^ not found in this scope
  |
help: consider importing one of these items
   |
2  | use fuel_indexer_plugin::prelude::Header;
   |
2  | use fuel_indexer_types::prelude::Header;
   |

error[E0422]: cannot find struct, variant or union type `TransactionData` in this scope
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |         transactions: vec![TransactionData {
  |                            ^^^^^^^^^^^^^^^ not found in this scope
  |
help: consider importing one of these items
   |
2  | use fuel_indexer_plugin::prelude::TransactionData;
   |
2  | use fuel_indexer_types::prelude::TransactionData;
   |

error[E0433]: failed to resolve: use of undeclared type `TransactionStatus`
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |             status: TransactionStatus::default(),
  |                     ^^^^^^^^^^^^^^^^^ use of undeclared type `TransactionStatus`
  |
help: consider importing one of these items
   |
2  | use fuel_indexer_plugin::prelude::TransactionStatus;
   |
2  | use fuel_indexer_types::prelude::TransactionStatus;
   |

error[E0433]: failed to resolve: use of undeclared type `Transaction`
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |             transaction: Transaction::default(),
  |                          ^^^^^^^^^^^ use of undeclared type `Transaction`
  |
help: consider importing one of these items
   |
2  | use fuel_indexer_plugin::prelude::Transaction;
   |
2  | use fuel_indexer_types::prelude::Transaction;
   |
2  | use fuels::prelude::Transaction;
   |
2  | use fuels::tx::Transaction;
   |
     and 1 other candidate

error[E0425]: cannot find function `serialize` in this scope
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |     let mut bytes = serialize(&data);
  |                     ^^^^^^^^^ not found in this scope
  |
help: consider importing one of these items
   |
2  | use fuel_indexer_lib::utils::serialize;
   |
2  | use fuel_indexer_plugin::serialize;
   |

error[E0425]: cannot find function `handle_events` in this scope
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |     handle_events(ptr, len);
  |     ^^^^^^^^^^^^^ not found in this scope

error: unused import: `fuels::types::traits::Tokenizable`
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |     use fuels::types::traits::Tokenizable;
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `-D unused-imports` implied by `-D warnings`
